--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,37 @@
 name: Deploy Website
 
 on:
- push:
-   branches: 
+  push:
+    branches:
       - main
 
 jobs:
-   validate-html:
-      runs-on: ubuntu-latest
+  validate-html:
+    runs-on: ubuntu-latest
     steps:
-     - name: Checkout del codigo
-       uses: actions/checkout@v3
+      - name: Checkout del código
+        uses: actions/checkout@v3
 
-     - name: Validar HTML
-       uses: Cyb3r-Jak3/html15-validator-action@v1
-       with:
+      - name: Validar HTML
+        uses: Cyb3r-Jak3/html5-validator-action@v1
+        with:
           file: index.html
 
-deploy:
-  needs: validate-html
-  runs-on: ubunt-latest
-steps:
- -name: Checkout del codigo
-  uses: actions/checkout@v3
+  deploy:
+    needs: validate-html
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout del código
+        uses: actions/checkout@v3
 
-- name: Configurar GitHub Pages
-  uses: actions/configure-pages@v3
+      - name: Configurar GitHub Pages
+        uses: actions/configure-pages@v3
 
--name: Publicar en GitHub Pages
- uses: actions/upload-pages-artifact@v2
+      - name: Publicar en GitHub Pages
+        uses: actions/upload-pages-artifact@v2
 
+      - name: Desplegar en GitHub Pages
+        uses: actions/deploy-pages@v1
 
 
 
