--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Validar HTML
-        uses: Cyb3r-Jak3/html5-validator-action@v1
+        uses: Cyb3r-Jak3/html5-validator-action@v1.3.0
         with:
           file: index.html
 
@@ -27,12 +27,14 @@ jobs:
       - name: Configurar GitHub Pages
         uses: actions/configure-pages@v3
 
+      - name: Configurar la rama de despliegue
+        run: echo "GITHUB_PAGES_DEPLOY=1" >> $GITHUB_ENV
+
       - name: Publicar en GitHub Pages
         uses: actions/upload-pages-artifact@v2
 
       - name: Desplegar en GitHub Pages
         uses: actions/deploy-pages@v1
-
 
 
 
