--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,28 +7,29 @@ on:
 
 jobs:
   validate-html:
+    name: Validar HTML
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout del código
+      - name: Descargar el repositorio
         uses: actions/checkout@v3
 
       - name: Validar HTML
         uses: Cyb3r-Jak3/html5-validator-action@v1
         with:
-          file: index.html
+          file: index.html  # Asegúrate de que este sea el archivo correcto
 
   deploy:
-    needs: validate-html
+    name: Desplegar Sitio
     runs-on: ubuntu-latest
+    needs: validate-html  # Espera a que la validación termine antes de desplegar
+
     steps:
-      - name: Checkout del código
+      - name: Descargar el repositorio
         uses: actions/checkout@v3
 
-      - name: Configurar GitHub Pages
-        uses: actions/configure-pages@v3
-
       - name: Publicar en GitHub Pages
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v1
 
-      - name: Desplegar en GitHub Pages
+      - name: Desplegar
         uses: actions/deploy-pages@v1
