--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,26 @@
 name: Deploy Website
 
-on:
-  push:
-    branches:
-      - main
+on: push
 
 jobs:
   validate-html:
-    name: Validar HTML
     runs-on: ubuntu-latest
-
     steps:
-      - name: Descargar el repositorio
-        uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      - name: Validar HTML
-        uses: Cyb3r-Jak3/html5-validator-action@v1
-        with:
-          file: index.html  # Asegúrate de que este sea el archivo correcto
+      - name: Install HTMLHint
+        run: npm install -g htmlhint
+
+      - name: Validate HTML
+        run: htmlhint . || true
 
   deploy:
-    name: Desplegar Sitio
+    needs: validate-html
     runs-on: ubuntu-latest
-    needs: validate-html  # Espera a que la validación termine antes de desplegar
-
     steps:
-      - name: Descargar el repositorio
-        uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      - name: Publicar en GitHub Pages
-        uses: actions/upload-pages-artifact@v1
-
-      - name: Desplegar
-        uses: actions/deploy-pages@v1
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v2
