intento 11 de subirlo

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,13 @@
 name: Deploy Website
 
-on: push
+on: 
+  push:
+    branches:
+      - main 
+
+permissions:
+  id-token: write
+  contents: read
 
 jobs:
   validate-html:
