--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   validate-html:
     runs-on: ubuntu-latest
@@ -12,10 +17,11 @@ jobs:
       - name: Checkout del código
         uses: actions/checkout@v3
 
+      - name: Instalar HTMLHint
+        run: npm install -g htmlhint
+
       - name: Validar HTML
-        uses: Cyb3r-Jak3/html5-validator-action@v1
-        with:
-          file: index.html
+        run: htmlhint . || true
 
   deploy:
     needs: validate-html
@@ -28,4 +34,8 @@ jobs:
         uses: actions/configure-pages@v3
 
       - name: Publicar en GitHub Pages
+        uses: actions/upload-pages-artifact@v2
+
+      - name: Desplegar en GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v2
