--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+
 name: Deploy Website
 
 on:
@@ -26,6 +27,10 @@ jobs:
   deploy:
     needs: validate-html
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
       - name: Checkout del código
         uses: actions/checkout@v3
@@ -35,7 +40,6 @@ jobs:
 
       - name: Publicar en GitHub Pages
         uses: actions/upload-pages-artifact@v2  
-
       - name: Desplegar en GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
